tests/snapshots/unparse_tests__create_domain_1.snap
---
source: tests/unparse_tests.rs
description: "tests/sql/ddl/create_domain.sql:1"
expression: prettified
---
CREATE DOMAIN foo AS int
