tests/snapshots/unparse_tests__create_domain_2.snap
---
source: tests/unparse_tests.rs
description: "tests/sql/ddl/create_domain.sql:2"
expression: prettified
---
CREATE DOMAIN Foo AS int CONSTRAINT Non_Negative CHECK (value > 0)
