tests/snapshots/unparse_tests__create_domain_3.snap
---
source: tests/unparse_tests.rs
description: "tests/sql/ddl/create_domain.sql:3"
expression: prettified
---
CREATE DOMAIN foo AS varchar(10) NOT NULL, DEFAULT 'null'
