tests/snapshots/unparse_tests__create_extension_1.snap
---
source: tests/unparse_tests.rs
description: "tests/sql/ddl/create_extension.sql:1"
expression: prettified
---
CREATE EXTENSION IF NOT EXISTS hstore
