tests/snapshots/unparse_tests__create_extension_2.snap
---
source: tests/unparse_tests.rs
description: "tests/sql/ddl/create_extension.sql:2"
expression: prettified
---
CREATE EXTENSION Foobar VERSION 1 CASCADE
