tests/snapshots/unparse_tests__create_extension_3.snap
---
source: tests/unparse_tests.rs
description: "tests/sql/ddl/create_extension.sql:3"
expression: prettified
---
CREATE EXTENSION foo SCHEMA addons
