tests/snapshots/unparse_tests__create_function_3.snap
---
source: tests/unparse_tests.rs
description: "Statement: tests/sql/ddl/create_function.sql:3"
expression: prettified
---
CREATE FUNCTION func()
RETURNS void LANGUAGE sql
AS $$
    SELECT $_$$_$;
$$
