tests/snapshots/unparse_tests__create_schema_1.snap
---
source: tests/unparse_tests.rs
description: "tests/sql/ddl/create_schema.sql:1"
expression: prettified
---
CREATE SCHEMA hollywood
